--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li>THE&nbsp;&nbsp;LIFE&nbsp;&nbsp;OF&nbsp;&nbsp;PABLO</li>
             <li>THE&nbsp;&nbsp;LIFE&nbsp;&nbsp;OF&nbsp;&nbsp;PABLO</li>
             <li>THE&nbsp;&nbsp;LIFE&nbsp;&nbsp;OF&nbsp;&nbsp;PABLO</li>
-            <li>THE&nbsp;&nbsp;LIFE&nbsp;&nbsp;OF&nbsp;&nbsp;PABLO</li>
+            <li>THE&nbsp;&nbsp;LIFE&nbsp;&nbsp;OF&nbsp;&nbsp;<a href="http://ryanyun.nyc" target="_blank">RYAN</a></li>
           </ul>
         </div>
         <div class="image"></div>
